# Uni-versal-Engine

./: .gitignore  CMakeLists.txt  README.md  SETUP.md  clean.bat  imgui.ini  run.bat
imgui/backends/: imgui_impl_opengl3.cpp
src/: main.cpp
src/Core/: Engine.cpp  Engine.h
src/Core/Components/: BoxCollider2D.h  MeshRenderer2D.h  Rigidbody2D.h  Scene.h  TestComponent.h  Transform2D.h  Transform3D.h
src/Core/ECS/: Component.cpp  Component.h  Entity.h  System.cpp  System.h  World.cpp  World.h
src/Core/ECS/Managers/: EntityManager.h
src/Core/Scenes/: SimpleScene2D.h
src/Core/Systems/: MouseInteractionSystem.h  Physics2DSystem.h  RenderSystem2D.h
src/Renderer/: Buffer.cpp  Buffer.h  Cube.h  RenderAPI.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
src/Renderer/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
tests/: ECSTest.h  ECSTests.cpp  TestMain.cpp
